[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/roboto_mono_36.tres" type="DynamicFont" id=1]
[ext_resource path="res://LevelMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 513, 301 )
scale = Vector2( 14.6, 8.65714 )
texture = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 48.0
margin_top = 92.0
margin_right = 506.0
margin_bottom = 559.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 430.0
margin_bottom = 129.0
custom_constants/separation = 17

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_right = 430.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 1 )
text = "      LEVEL 1      "

[node name="Button2" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 430.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 1 )
text = "LEVEL 2"

[node name="Label" type="Label" parent="."]
margin_left = 368.0
margin_top = 20.0
margin_right = 636.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
text = "LEVEL MENU"

[node name="InfoLabel" type="Label" parent="."]
margin_left = 543.0
margin_top = 94.0
margin_right = 811.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 1 )

[node name="Button3" type="Button" parent="."]
margin_left = 853.0
margin_top = 509.0
margin_right = 978.0
margin_bottom = 565.0
custom_fonts/font = ExtResource( 1 )
text = "Play"

[node name="Button4" type="Button" parent="."]
margin_left = 65.0
margin_top = 502.0
margin_right = 190.0
margin_bottom = 558.0
custom_fonts/font = ExtResource( 1 )
text = "Back"

[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="pressed" from="Button3" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Back_pressed"]
